<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAccent"

    tools:context="com.rakbny.Activity.Contact_Us">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="24dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/name_em"
                android:layout_marginTop="12dp"
                android:padding="8dp"
                android:background="@android:color/white"
                android:hint="@string/Username"
                android:layout_width="match_parent"
                android:layout_height="48dp" />

            <EditText
                android:id="@+id/phone_em"

                android:padding="8dp"
                android:background="@android:color/white"
                android:layout_marginTop="12dp"
                android:hint="@string/phone"
                android:layout_width="match_parent"
                android:layout_height="48dp" />

            <EditText
                android:id="@+id/issue_em"
                android:padding="8dp"
                android:gravity="top"
                android:background="@android:color/white"
                android:layout_marginTop="12dp"
                android:hint="@string/issue"
                android:layout_width="match_parent"
                android:layout_height="360dp" />
            <Button
                android:onClick="send_mail"
                android:background="@drawable/white_btt"
                android:layout_marginTop="12dp"
                android:text="Send"
                android:layout_width="match_parent"
                android:layout_height="48dp" />
        </LinearLayout>

    </ScrollView>
    <FrameLayout
        android:visibility="gone"
        android:clickable="true"
        android:id="@+id/loadingSpinner"
        android:elevation="12dp"
        android:background="@color/scrim"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_gravity="center"
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </FrameLayout>

</FrameLayout>
