<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_margin="12dp"
        android:text="Users Section"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<android.support.v7.widget.CardView
    android:layout_weight="1"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/danger"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="4dp"
        android:onClick="create"
        android:id="@+id/delete_student"
        android:layout_width="match_parent"
        android:layout_height="108dp">
        <ImageView
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:src="@drawable/student"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:layout_weight="2"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:textSize="14sp"
            android:gravity="center"
            android:text="@string/delete_student"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</android.support.v7.widget.CardView>
<android.support.v7.widget.CardView
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/danger">
    <LinearLayout
        android:id="@+id/delete_supervisor"
        android:paddingTop="4dp"
        android:orientation="vertical"
        android:onClick="create"
        android:layout_width="match_parent"
        android:layout_height="108dp">
        <ImageView
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/super_visor"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:layout_weight="2"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:textSize="14sp"
            android:gravity="center"
            android:text="@string/delete_supervisor"

            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/danger">
            <LinearLayout
                android:paddingTop="4dp"
                android:orientation="vertical"
                android:onClick="create"
                android:id="@+id/delete_parent"

                android:layout_width="match_parent"
                android:layout_height="108dp">
                <ImageView
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/driver"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <TextView
                    android:layout_weight="2"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:text="@string/delete_parent"
                    android:layout_gravity="bottom"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/danger">
            <LinearLayout
                android:paddingTop="4dp"
                android:orientation="vertical"
                android:onClick="create"
                android:id="@+id/delete_driver"
                android:layout_width="match_parent"
                android:layout_height="108dp">
                <ImageView
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/driver"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <TextView
                    android:layout_weight="2"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:text="@string/delete_driver"
                    android:layout_gravity="bottom"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_weight="1"
            android:layout_margin="8dp"
    app:cardBackgroundColor="@color/danger"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="4dp"
        android:onClick="create"
        android:id="@+id/delete_admin"
        android:layout_width="match_parent"
        android:layout_height="108dp">
        <ImageView
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/admin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:layout_weight="2"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:textSize="14sp"
            android:gravity="center"
            android:text="@string/delete_admin"

            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</android.support.v7.widget.CardView>
<android.support.v7.widget.CardView
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/danger"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:onClick="create"
        android:id="@+id/delete_user"
        android:layout_width="match_parent"
        android:layout_height="108dp">
        <ImageView
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_delete_forever_white_48dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TextView
            android:layout_weight="2"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:textSize="14sp"
            android:gravity="center"

            android:text="@string/delete_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</android.support.v7.widget.CardView>
    </TableRow>

</LinearLayout>