<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_margin="12dp"
        android:text="Buses Section"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>
    <TableRow
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:layout_weight="1"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:paddingTop="4dp"
                android:onClick="create"
                android:id="@+id/create_bus"
                android:layout_width="match_parent"
                android:layout_height="108dp">
                <ImageView
                    android:adjustViewBounds="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:src="@drawable/ic_directions_bus_white_48dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <TextView
                    android:layout_weight="2"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:text="@string/create_bus"
                    android:layout_gravity="bottom"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/blue">
            <LinearLayout
                android:paddingTop="4dp"
                android:orientation="vertical"
                android:onClick="create"
                android:id="@+id/create_home_route"
                android:layout_width="match_parent"
                android:layout_height="108dp">
                <ImageView
                    android:adjustViewBounds="true"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_home_white_36dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <TextView
                    android:layout_weight="2"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:text="@string/create_home_route"
                    android:layout_gravity="bottom"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/colorAccent">
            <LinearLayout
                android:paddingTop="4dp"
                android:orientation="vertical"
                android:onClick="create"
                android:id="@+id/create_school_route"

                android:layout_width="match_parent"
                android:layout_height="108dp">
                <ImageView
                    android:adjustViewBounds="true"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_school_white_36dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <TextView
                    android:layout_weight="2"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:text="@string/create_school_route"
                    android:layout_gravity="bottom"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </TableRow>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:layout_weight="1"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:paddingTop="4dp"
                android:onClick="create"
                android:id="@+id/bus_location"
                android:layout_width="match_parent"
                android:layout_height="108dp">
                <ImageView
                    android:adjustViewBounds="true"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:tint="@color/blue"
                    android:src="@drawable/ic_my_location_black_36dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <TextView
                    android:layout_weight="2"
                    android:textStyle="bold"
                    android:textColor="@color/colorTextSecondery"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:text="@string/bus_location"
                    android:layout_gravity="bottom"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/colorPrimary"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:onClick="create"
                android:id="@+id/deactivate_bus"
                android:layout_width="match_parent"
                android:layout_height="108dp">
                <ImageView
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_pause_white_48dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <TextView
                    android:layout_weight="2"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:text="@string/deactivate_bus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/danger"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:onClick="create"
                android:id="@+id/delete_bus"
                android:layout_width="match_parent"
                android:layout_height="108dp">
                <ImageView
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_delete_forever_white_48dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <TextView
                    android:layout_weight="2"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:text="@string/delete_bus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
    <TableRow
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:layout_weight="1"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:paddingTop="4dp"
                android:onClick="create"
                android:id="@+id/activate_bus"
                android:layout_width="match_parent"
                android:layout_height="108dp">
                <ImageView
                    android:adjustViewBounds="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:src="@drawable/ic_play_arrow_white_48dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <TextView
                    android:layout_weight="2"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:text="@string/activate_bus"
                    android:layout_gravity="bottom"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <View android:layout_weight="1"
            android:clickable="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <View android:layout_weight="1"
            android:clickable="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </TableRow>

</LinearLayout>